<resources>
    <string name="app_name">SoundHound</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_player">Player</string>
    <string name="play">||</string>
    <string name="revind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="previous"><![CDATA[|<]]></string>
    <string name="next"><![CDATA[>|]]></string>
    <string name="ok">OK</string>
    <string name="copyright_message">Simple Equalizer v0.1a, Copyright \u00A92013 Kevin Boone. Feel free to distribute as you see fit.</string>
    <string name="title_activity_equalizer">Equalizer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
