<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Player"
    tools:showIn="@layout/activity_player">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/bt_play"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/bt_revind"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/bt_play"
        android:layout_toStartOf="@+id/bt_play"
        android:text="@string/revind" />

    <Button
        android:id="@+id/bt_forward"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/bt_play"
        android:layout_toRightOf="@+id/bt_play"
        android:text="@string/forward" />

    <Button
        android:id="@+id/bt_previous"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/bt_revind"
        android:layout_toStartOf="@+id/bt_revind"
        android:text="@string/previous" />

    <Button
        android:id="@+id/bt_next"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/bt_forward"
        android:layout_toRightOf="@+id/bt_forward"
        android:text="@string/next" />

</RelativeLayout>
